center mkt-select options on smaller screen sizes (bug 1150736)

--- a/src/media/css/elements--select.styl
+++ b/src/media/css/elements--select.styl
@@ -62,6 +62,10 @@ mkt-option {
     }
 }
 
+.mkt-option--center {
+    justify-content: center;
+}
+
 mkt-option[selected] {
     // Don't show selected option in the list.
     display: none;
